--- a/templates/home.html
+++ b/templates/home.html
@@ -245,6 +245,7 @@
         <li><img src="../static/img/Screenshot_20240424_063307_Image to PDF Converter.jpg" alt=""></li>
         <li><img src="../static/img/Screenshot_20240424_063329_Image to PDF Converter.jpg" alt=""></li>
         <li><img src="../static/img/Screenshot_20240424_063347_Image to PDF Converter.jpg" alt=""></li>
+        <li><img src="../static/img/django.jpg" alt=""></li>
         <!-- Add more certificate images as needed -->
       </div>
     </section>
@@ -252,9 +253,10 @@
     <section id="contact">
       <h2>Contact</h2>
       <p>Email: techwithtordi@gmail.com</p>
+      <p>Whatsapp: <a href="https:wa.me/+2347068848255">+2347068848255</a></p>
       <p>Phone: +2347068848255</p>
       <p>Phone: +2347032174479</p>
-      <p>GitHub: <a href="https://github.com/tori_portfolio" target="_blank" style="color: var(--accent-color);">My Github Profile</a></p>
+      <p>GitHub: <a href="https://github.com/tordi_portfolio" target="_blank" style="color: var(--accent-color);">My Github Profile</a></p>
     </section>
   </main>
 
