--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/brands.css" integrity="sha512-aMFlN2yPSsRLLv40LrRPFMO0SGMs088xIKOngrwCpudSrf2vL/Q6gdHOmq6zSjDeow4PBaLtA932MuIu6mmYVw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{% static 'fontawesome-free/css/all.min.css' %}">
     <link rel="stylesheet" href="{% static 'app_name/css/fontawesome.min.css' %}">
-    <title>My Bio</title>
+    <title>Tordi Port-Folio</title>
     <link rel="stylesheet" href="../static/css/styles.css">
     <style>
         body{
